internal/translate/testdata/existing_listener/out-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: new
spec:
  parentRefs:
  - name: existing-listener
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: s1
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: existing-2
spec:
  parentRefs:
  - name: existing-listener
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: s2
      port: 80
